# serverless

./: .cz.yaml  .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yaml  shell.nix  tasks.db
docs/uml/: create_uml.sh  deploy_request.puml  invoke_request.puml  main_scenario.puml
functions/example/: function.json
functions/example-go/: Dockerfile  function.json  main.go
functions/example-js/: Dockerfile  function.json  main.js
functions/example-rust/: Cargo.toml  Dockerfile  function.json
functions/example-rust/src/: main.rs
migrations/: 20251102122220_running-functions.sql
migrations/running-functions/: down.sql
rest/: requests.http
src/: container_manager.rs  deployed_functions.rs  function_manager.rs  load_balancer.rs  logger.rs  main.rs  models.rs  redis_manager.rs  shutdown.rs
src/balancers/: least_loaded.rs  mod.rs  random.rs  round_robin.rs  weighted_priority.rs
src/errors/: deploy_error.rs  function_error.rs  mod.rs
src/routes/: deploy.rs  get_status.rs  invoke.rs  list_functions.rs  mod.rs  replicas.rs  stop.rs  update_config.rs
src/sqlite/: queries.rs
