[package]
name = "serverless"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = [ "full" ] }
bollard = "*"
serde_json = "1.0.145"
serde = "1.0.227"
reqwest = "0.12.23"
axum = "0.8.4"
uuid = { version = "1.18.1", features = ["v4"] }
anyhow = "1.0.100"
futures-util = "0.3.31"
