[package]
name = "serverless"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "*", features = [ "r2d2", "uuid" ] }
tokio = { version = "1", features = [ "full" ] }
bollard = "*"
serde_json = "1.0.145"
serde = "1.0.227"
reqwest = "0.12.23"
axum = "0.8.4"
uuid = { version = "1.18.1", features = ["v7", "serde"] }
anyhow = "1.0.100"
futures-util = "0.3.31"
thiserror = "2.0.17"
r2d2 = "0.8.10"
